--- a/index.html
+++ b/index.html
@@ -205,8 +205,7 @@
     width: 303px;
     height: 38px;
     margin-left: 40px;
-    position: fixed;
-    margin-top: 5px;
+    margin-top: 12%;
     border-radius: 25px;
     align-items: center;
     display: inline-flex;
