--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
     width: 303px;
     height: 38px;
     margin-left: 40px;
-    margin-top: 12%;
+    margin-top: 22px;
     border-radius: 25px;
     align-items: center;
     display: inline-flex;
