--- a/index.html
+++ b/index.html
@@ -174,13 +174,13 @@
     .ad,.updates{
         overflow: hidden;
     }
-    .updates-img{
-        margin-left: 81px;
-        margin-top: 10px;
-        width: 218px;
-        height: 151px;
-        border-radius: 8px;
-    }
+    .updates-img {
+    margin-left: 52px;
+    margin-top: 10px;
+    width: 283px;
+    height: 107px;
+    border-radius: 8px;
+}
     .hidden{
         display: none;
     }
@@ -206,6 +206,7 @@
     height: 38px;
     margin-left: 40px;
     margin-top: 22px;
+    position: fixed;
     border-radius: 25px;
     align-items: center;
     display: inline-flex;
