--- a/index.html
+++ b/index.html
@@ -275,10 +275,10 @@
 </div>
 </div>
 <div class="footer">
-    <a href="#" class="footer-links"><button class="footer-btn clicked"><i class="fa-solid fa-house"></i></button></a>
-    <a href="#" class="footer-links"><button class="footer-btn"><i class="fa-solid fa-bullhorn" style="transform: rotate(338deg);"></i></button></a>
-    <a href="#" class="footer-links"><button class="footer-btn"><i class="fa-solid fa-gamepad"></i></button></a>
-    <a href="#" class="footer-links"><button class="footer-btn"><i class="fa-solid fa-video"></i></button></a>
+    <a href="#" class="footer-links"><button class="footer-btn clicked"><i class="fa-solid fa-house" style="overflow: hidden;"></i></button></a>
+    <a href="#" class="footer-links"><button class="footer-btn"><i class="fa-solid fa-bullhorn" style="transform: rotate(338deg); overflow: hidden;"></i></button></a>
+    <a href="#" class="footer-links"><button class="footer-btn"><i class="fa-solid fa-gamepad" style="overflow: hidden;"></i></button></a>
+    <a href="#" class="footer-links"><button class="footer-btn"><i class="fa-solid fa-video" style="overflow: hidden;"></i></button></a>
 </div>
 <script>
         //Color Select
