--- a/index.html
+++ b/index.html
@@ -261,13 +261,13 @@
     </div>
 </div>
 <div class="ad">
-    <a href="#"><img src="banner-ad.png" class="ad-img"></a>
+    <a href="#"><img src="28670.png" class="ad-img"></a>
 </div>
 <div class="updates">
     <h3 class="user-text">Updates:</h3>
-    <div id="div1"><img src="updates-img.png" class="updates-img"></div>
-    <div id="div2" class="hidden"><img src="updates-img.png" class="updates-img"></div>
-    <div id="div3" class="hidden"><img src="updates-img.png" class="updates-img"></div>
+    <div id="div1"><img src="283107.png" class="updates-img"></div>
+    <div id="div2" class="hidden"><img src="283107.png" class="updates-img"></div>
+    <div id="div3" class="hidden"><img src="283107.png" class="updates-img"></div>
     <div class="dots-main">
     <span class="dot active" onclick="showDiv(1)"></span>
     <span class="dot" onclick="showDiv(2)"></span>
