--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     background-color: #cc0000;
 }
 .search-box {
-    margin-left: 42px;
+    margin-left: 12.5%;
     margin-top: 16px;
     width: 260px;
     padding: 8px;
@@ -146,7 +146,7 @@
         font-size: 14px;
     }
     .user-text{
-        margin-left: 50px;
+        margin-left: 13%;
         margin-top: 10px;
     }
     .icon-img{
@@ -161,11 +161,11 @@
         border: none;
     }
     .icons{
-        margin-left: 40px;
+        margin-left: 10%;
         margin-top: 10px;
     }
     .ad-img{
-        margin-left: 50px;
+        margin-left: 13%;
         margin-top: 28px;
         width: 286px;
         height: 70px;
@@ -175,7 +175,7 @@
         overflow: hidden;
     }
     .updates-img {
-    margin-left: 52px;
+    margin-left: 13%;
     margin-top: 10px;
     width: 283px;
     height: 107px;
@@ -204,7 +204,7 @@
     background: #FFF;
     width: 303px;
     height: 38px;
-    margin-left: 40px;
+    margin-left: 10%;
     margin-top: 22px;
     position: fixed;
     border-radius: 25px;
