--- a/index.html
+++ b/index.html
@@ -161,17 +161,15 @@
         border: none;
     }
     .icons{
-    position: absolute;
-    margin-left: 10%;
-    bottom: 494px;
+        margin-left: 10%;
+        margin-top: 10px;
     }
     .ad-img{
-    margin-left: 13%;
-    width: 286px;
-    position: absolute;
-    bottom: 399px;
-    height: 70px;
-    border-radius: 8px;
+        margin-left: 13%;
+        margin-top: 28px;
+        width: 286px;
+        height: 70px;
+        border-radius: 8px;
     }
     .ad,.updates{
         overflow: hidden;
@@ -180,8 +178,6 @@
     margin-left: 13%;
     margin-top: 10px;
     width: 283px;
-    position: absolute;
-    bottom: 250px;
     height: 107px;
     border-radius: 8px;
 }
@@ -203,16 +199,13 @@
   .dots-main{
     text-align: center;
     margin-top: 10px;
-    bottom: 211px;
-    left: 153px;
-    position: absolute;
   }
   .footer{
     background: #FFF;
     width: 303px;
     height: 38px;
     margin-left: 10%;
-    bottom: 112px;
+    margin-top: 70px;
     position: fixed;
     border-radius: 25px;
     align-items: center;
@@ -360,7 +353,7 @@
 <h3 class="user-text">User:</h3>
 <div class="search-results" id="searchResults"></div>
 <div class="social-links">
-    <h3 class="user-text" style="position: absolute; bottom: 560px;">Our Social Links:</h3>
+    <h3 class="user-text">Our Social Links:</h3>
     <div class="icons">
         <a href="#"><button class="icon-btn"><img src="youtube-icon.svg" class="icon-img"></button></a>
         <a href="#"><button class="icon-btn"><img src="facebook-icon.svg" class="icon-img"></button></a>
@@ -372,7 +365,7 @@
     <a href="#"><img src="28670.png" class="ad-img"></a>
 </div>
 <div class="updates">
-    <h3 class="user-text" style="position: absolute; bottom: 368px;">Updates:</h3>
+    <h3 class="user-text">Updates:</h3>
     <div id="div1"><img src="283107.png" class="updates-img"></div>
     <div id="div2" class="hidden"><img src="283107.png" class="updates-img"></div>
     <div id="div3" class="hidden"><img src="283107.png" class="updates-img"></div>
